# Vitaliteitstool

./: .gitignore  package-lock.json  package.json
.github/workflows/: build-windows.yml
docs/: auth-guard.js  branch-qualifications.js  e-learning-vitaliteitstool.html  import-specifications.js  index.html  stakeholder-actoren.js  vitaliteitstool-analyzer.html  vitaliteitstool-reader.html
docs/schouw-app/: gebruiksaanwijzing.html  index.html  manifest.json  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
